# Collaborative_editor

./: .gitignore
Servant_Auth/: backend.cabal
Servant_Auth/app/: App.hs  CommonConfig.hs  Main.hs
Servant_Auth/lib/: CookieHandlers.hs  Db.hs  JsonTypes.hs  VerifyEmail.hs
Servant_Auth/ts_types/: TSTypes.hs  types.d.ts
frontend/: .editorconfig  deploy.sh  global.css  index.html  localbuild.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  Bugs_fixed_so_far.txt  Editor.tsx  Home.tsx  NavBar.tsx  NotFound.tsx  architecture.txt  main.tsx  smtp.norg
frontend/src/Signup_Login/: CloseIcon.tsx  Feedback.tsx  Login.tsx  Toast_Template.tsx
frontend/src/css/: Home.module.css  NavBar.module.css  global_tailwind.css
frontend/src/css/Signin/: Common.module.css  Login.module.css  SignUp.module.css
frontend/src/resources/: pencil_4713294.pngZone.Identifier
