cabal-version:      3.8
name:               backend
version:            0.1.0.0
description: Concurrency practice 
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable app
    import:           warnings
    main-is:          Main.hs
    other-modules: Db 
                 , App
                 , SendMail
                 , JsonTypes  
                 , VerifyEmail
                 , CommonConfig 
                 , Mailing
                 , CookieHandlers
    -- other-extensions:
    build-depends: base >= 4.7 && < 5
                 , servant
                 , servant-server
                 , servant-blaze 
                 , servant-auth-server 
                 , servant-auth 
                 , servant-client 
                 , blaze-html 
                 , postgresql-simple
                 , text
                 , aeson
                 , wai
                 , warp
                 , password 
                 , uuid 
                 , time 
                 , async
                 , resource-pool 
                 , transformers 
                 , http-client 
                 , http-client-tls
                 , cookie 
                 , wreq 
                 , lens 
                 , bytestring
                 , hedis 
                 , string-interpolate 
                 , servant-typescript
                 , aeson-typescript 
                 , mtl 
    hs-source-dirs: app
                  , lib
    default-language: Haskell2010
    ghc-options: -threaded

executable ts_types 
    import: warnings
    main-is: TSTypes.hs 
    build-depends: base >= 4.7 && < 5
                 , aeson
                 , aeson-typescript
                 , text
                 , time
                 , servant-auth
    other-modules: JsonTypes
    hs-source-dirs: lib
                  , ts_types/ 
    ghc-options: -main-is TSTypes 
    default-language: Haskell2010


-- cabal v2-update 'hackage.haskell.org,2025-05-29T07:14:22Z'
